[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asp"
version = "0.0.1"
authors = [{name="Matthias Dold", email="matthias.dold@gmx.net"}]
description = "Advanced slides postprocessing"
readme ="README.md"
requires-python = ">=3.10"

[project.urls]
"homepage" = "https://github.com/matthiasdold/advanced_slides_postprocessing"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
    "./"
]
filterwarnings = ["ignore:::.*fire.core"]
